--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Example for Serverless Framework application in Python",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sls": "serverless"
   },
   "author": "alessandro.arici@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "serverless": "^3.1.0",
     "serverless-offline": "^6.8.0",
     "serverless-python-requirements": "^5.1.0"
   }
