--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "alessandro.arici@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "npm-check-updates": "^12.2.1",
     "serverless": "^3.1.0",
-    "serverless-offline": "^6.8.0",
-    "serverless-python-requirements": "^5.1.0"
+    "serverless-offline": "^8.4.0",
+    "serverless-python-requirements": "^5.3.1"
   }
 }
